# primaa-technical-test

./: .gitignore  .pre-commit-config.yaml  .pytest.ini  README.md  Taskfile.yml  dockerfile  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: db.py  main.py  models.py
app/api/routes/: get_job_id.py  submit_job.py
app/primaalgo/: poi_detection.py  process.py  roi_detection.py
app/store/: jobs.py
tests/: conftest.py  test_get_job_id.py  test_submit_job.py
tests/http_manual_testing/: get.existing.job.http  get.missing.job.http  post.poi.http  post.roi.http
