[project]
name = "primaa-api"
version = "0.1.0"
description = "An API to trigger job for image processing"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi[standard]",
    "uvicorn",
    "pydantic",
    "pillow",
    "geojson",
    "requests",
    "shapely"
]

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "coverage",
    "ruff",
    "httpx"
]
